--- a/CSS/design.css
+++ b/CSS/design.css
@@ -11,16 +11,16 @@ font-size: xx-large;
 
 body {background-color: rgb(210, 250, 250);}
 
-ul {background-color: rgb(214, 182, 243);
+ol {background-color: rgb(214, 182, 243);
 padding: 5px 10px;
 border-radius: 5px;
 }
 
-ul li {display: inline;
+ol li {display: inline;
 padding: 0px 10px;
 }
 
-ul li a:link, ul li a:visited, ul li a:hover {
+ol li a:link, ul li a:visited, ul li a:hover {
 border-bottom: none;
 font-weight: bold;
 color:rgb(2, 2, 54);
