--- a/CSS/design.css
+++ b/CSS/design.css
@@ -63,3 +63,9 @@ font-size: x-large;
 }
 
 article h2 {font-size:xx-large}
+
+h2 { font-weight:bold;}
+
+.categories { color:rgb(44, 2, 78);}
+
+img {width: 600px;}
