--- a/CSS/design.css
+++ b/CSS/design.css
@@ -69,3 +69,10 @@ h2 { font-weight:bold;}
 .categories { color:rgb(44, 2, 78);}
 
 img {width: 600px;}
+
+h3 {font-weight:bold;}
+
+.how { background-color: black;
+color:rgb(255, 217, 0);
+border-radius: 20%;
+}
