--- a/CSS/design.css
+++ b/CSS/design.css
@@ -74,5 +74,7 @@ h3 {font-weight:bold;}
 
 .how { background-color: black;
 color:rgb(255, 217, 0);
-border-radius: 20%;
+border-radius: 5%;
+padding:5%;
 }
+h3.how { padding:1%;}
