--- a/CSS/design.css
+++ b/CSS/design.css
@@ -1,17 +1,18 @@
 header h1 {font-family: sans-serif;
-color: rgb(1, 1, 82);
-background-color: rgb(93, 178, 228);
+color: rgb(172, 156, 243);
+background-color: rgb(0, 0, 0);
 border-radius: 10px;
 padding: 10px 0px;
-border-style: dashed;
+border-style: double;
+border-color:rgba(255, 20, 3, 0.945);
 font-size: xx-large;
 }
 
 .purple {color:rgb(151, 5, 151)}
 
-body {background-color: rgb(210, 250, 250);}
+body {background-color: rgba(27, 2, 34, 0.945);}
 
-ol {background-color: rgb(214, 182, 243);
+ol {background-color: rgb(255, 148, 9);
 padding: 5px 10px;
 border-radius: 5px;
 }
@@ -23,15 +24,15 @@ padding: 0px 10px;
 ol li a:link, ul li a:visited, ul li a:hover {
 border-bottom: none;
 font-weight: bold;
-color:rgb(2, 2, 54);
+color:rgb(197, 197, 248);
 }
 
-.selected {background-color: rgb(187, 129, 241);
+.selected {background-color: rgb(255, 94, 0);
 padding: 5px 10px;
 border-radius: 5px;
 }
 
-article { background-color: violet;
+article { background-color: rgb(2, 255, 87);
 padding: 10px;
 border-radius: 5px;
 }
@@ -44,7 +45,7 @@ article p {font-size: 20px;
 padding-left: 10px;
 }
 
-article h2 {color: rgb(71, 2, 71);}
+article h2 {color: rgb(2, 12, 54);}
 
 .small { font-size: medium;}
 
