--- a/CSS/design.css
+++ b/CSS/design.css
@@ -2,7 +2,7 @@ header h1 {font-family: sans-serif;
 color: rgb(172, 156, 243);
 background-color: rgb(0, 0, 0);
 border-radius: 10px;
-padding: 10px 0px;
+padding: 2.5%;
 border-style: double;
 border-color:rgba(255, 20, 3, 0.945);
 font-size: xx-large;
