--- a/CSS/school-design.css
+++ b/CSS/school-design.css
@@ -43,7 +43,6 @@ article { background-color: rgb(116, 245, 232);
 article h1, article h3 { font-weight: bold;
                         color:rgb(1, 1, 63);
 }
- article p { font-weight: normal;}
 
  article p.intro { color: rgb(231, 42, 8);
                    font-weight:bold;
@@ -54,13 +53,19 @@ article article.example1 { background-color: rgb(252, 215, 52);
                           border-radius: 5px;
                           border: dashed rgb(4, 4, 168);
                           font-family:Andale Mono, sans serif;
+                          
 }
 
 article article.example2 { background-color: red;
                            border-radius:5px;
                            border:dashed rgb(50, 0, 59);
                            font-family: Andale Mono, sans serif;
+                           
 
+}
+article article.example1 p , article article.example2 p { color:black;
+                                                          font-weight: normal;
+                                                          font-size:medium;
 }
 
 article h1 {font-family: Impact, sans-serif;
@@ -69,3 +74,8 @@ article h1 {font-family: Impact, sans-serif;
 }
 
 h3 {font-family: Trebuchet MS, sans serif;}
+
+article p { font-weight: bold;
+            font-size: 200%;
+            color:rgb(35, 1, 51);
+}
