--- a/CSS/design.css
+++ b/CSS/design.css
@@ -1,81 +1,32 @@
-header h1 {font-family: sans-serif;
-color: rgb(172, 156, 243);
-background-color: rgb(0, 0, 0);
-border-radius: 10px;
-padding: 2.5%;
-border-style: double;
-border-color:rgba(255, 20, 3, 0.945);
-font-size: xx-large;
+ol li { display: inline;
+}
+ol li a.selected {background-color: rgb(85, 145, 201);
+                  padding: 1.5%;
+                  border-radius: 5%;
+                  
 }
 
-.purple {color:rgb(151, 5, 151)}
-
-body {background-color: rgba(27, 2, 34, 0.945);}
-
-ol {background-color: rgb(255, 148, 9);
-padding: 5px 10px;
-border-radius: 5px;
+ol li a:link, ol li a:visited {border-bottom:none;
+                               color:rgb(1, 1, 66);
+                              
 }
 
-ol li {display: inline;
-padding: 0px 10px;
+nav{ background-color: rgb(163, 214, 248);
+     padding:2.5px;
+     border-radius: 5%;
+     margin: 10px 0px;
+    }
+
+header{ border-bottom: solid gray;
+        background-color: azure;
+        padding: 1.5%;
+        border-radius:2%;
 }
 
-ol li a:link, ul li a:visited, ul li a:hover {
-border-bottom: none;
-font-weight: bold;
-color:rgb(0, 0, 68);
+article { background-color:rgb(129, 235, 199);
+          padding:2.5%;
 }
 
-.selected {background-color: rgb(255, 94, 0);
-padding: 5px 10px;
-border-radius: 5px;
+body { background-color:black;
+       font-family:sans-serif;
 }
-
-article { background-color: rgb(2, 255, 87);
-padding: 10px;
-border-radius: 5px;
-}
-
-img { height: 400px;
-width: 400px;
-}
-
-article p {font-size: 20px;
-padding-left: 10px;
-}
-
-article h2 {color: rgb(2, 12, 54);}
-
-.small { font-size: medium;}
-
-footer { background-color: aquamarine;
-padding: 10px;
-font-weight: bold;
-color: rgb(0, 0, 59);
-border-style: dotted;
-border-color: orange;
-font-size: x-large;
-}
-
-.presentation {font-weight: bold;
-color: rgb(124, 0, 0);
-font-size: x-large;
-}
-
-article h2 {font-size:xx-large}
-
-h2 { font-weight:bold;}
-
-.categories { color:rgb(44, 2, 78);}
-
-img {width: 600px;}
-
-h3 {font-weight:bold;}
-
-.how { background-color: black;
-color:rgb(255, 217, 0);
-border-radius: 5%;
-padding:5%;
-}
-h3.how { padding:1%;}
